Sources/Engine/External/bgfx/bgfx/include/bgfx/c99/bgfx.h


typedef enum bgfx_access
{
    BGFX_ACCESS_READ,                         
    BGFX_ACCESS_WRITE,                        
    BGFX_ACCESS_READWRITE,                    
    BGFX_ACCESS_COUNT
} bgfx_access_t;
typedef enum bgfx_texture_format
{
    BGFX_TEXTURE_FORMAT_BC1,                  
    BGFX_TEXTURE_FORMAT_BC2,                  
    BGFX_TEXTURE_FORMAT_BC3,                  
    BGFX_TEXTURE_FORMAT_BC4,                  
    BGFX_TEXTURE_FORMAT_BC5,                  
    BGFX_TEXTURE_FORMAT_BC6H,                 
    BGFX_TEXTURE_FORMAT_BC7,                  
    BGFX_TEXTURE_FORMAT_ETC1,                 
    BGFX_TEXTURE_FORMAT_ETC2,                 
    BGFX_TEXTURE_FORMAT_ETC2A,                
    BGFX_TEXTURE_FORMAT_ETC2A1,               
    BGFX_TEXTURE_FORMAT_PTC12,                
    BGFX_TEXTURE_FORMAT_PTC14,                
    BGFX_TEXTURE_FORMAT_PTC12A,               
    BGFX_TEXTURE_FORMAT_PTC14A,               
    BGFX_TEXTURE_FORMAT_PTC22,                
    BGFX_TEXTURE_FORMAT_PTC24,                
    BGFX_TEXTURE_FORMAT_ATC,                  
    BGFX_TEXTURE_FORMAT_ATCE,                 
    BGFX_TEXTURE_FORMAT_ATCI,                 
    BGFX_TEXTURE_FORMAT_ASTC4X4,              
    BGFX_TEXTURE_FORMAT_ASTC5X4,              
    BGFX_TEXTURE_FORMAT_ASTC5X5,              
    BGFX_TEXTURE_FORMAT_ASTC6X5,              
    BGFX_TEXTURE_FORMAT_ASTC6X6,              
    BGFX_TEXTURE_FORMAT_ASTC8X5,              
    BGFX_TEXTURE_FORMAT_ASTC8X6,              
    BGFX_TEXTURE_FORMAT_ASTC8X8,              
    BGFX_TEXTURE_FORMAT_ASTC10X5,             
    BGFX_TEXTURE_FORMAT_ASTC10X6,             
    BGFX_TEXTURE_FORMAT_ASTC10X8,             
    BGFX_TEXTURE_FORMAT_ASTC10X10,            
    BGFX_TEXTURE_FORMAT_ASTC12X10,            
    BGFX_TEXTURE_FORMAT_ASTC12X12,            
    BGFX_TEXTURE_FORMAT_UNKNOWN,              
    BGFX_TEXTURE_FORMAT_R1,                   
    BGFX_TEXTURE_FORMAT_A8,                   
    BGFX_TEXTURE_FORMAT_R8,                   
    BGFX_TEXTURE_FORMAT_R8I,                  
    BGFX_TEXTURE_FORMAT_R8U,                  
    BGFX_TEXTURE_FORMAT_R8S,                  
    BGFX_TEXTURE_FORMAT_R16,                  
    BGFX_TEXTURE_FORMAT_R16I,                 
    BGFX_TEXTURE_FORMAT_R16U,                 
    BGFX_TEXTURE_FORMAT_R16F,                 
    BGFX_TEXTURE_FORMAT_R16S,                 
    BGFX_TEXTURE_FORMAT_R32I,                 
    BGFX_TEXTURE_FORMAT_R32U,                 
    BGFX_TEXTURE_FORMAT_R32F,                 
    BGFX_TEXTURE_FORMAT_RG8,                  
    BGFX_TEXTURE_FORMAT_RG8I,                 
    BGFX_TEXTURE_FORMAT_RG8U,                 
    BGFX_TEXTURE_FORMAT_RG8S,                 
    BGFX_TEXTURE_FORMAT_RG16,                 
    BGFX_TEXTURE_FORMAT_RG16I,                
    BGFX_TEXTURE_FORMAT_RG16U,                
    BGFX_TEXTURE_FORMAT_RG16F,                
    BGFX_TEXTURE_FORMAT_RG16S,                
    BGFX_TEXTURE_FORMAT_RG32I,                
    BGFX_TEXTURE_FORMAT_RG32U,                
    BGFX_TEXTURE_FORMAT_RG32F,                
    BGFX_TEXTURE_FORMAT_RGB8,                 
    BGFX_TEXTURE_FORMAT_RGB8I,                
    BGFX_TEXTURE_FORMAT_RGB8U,                
    BGFX_TEXTURE_FORMAT_RGB8S,                
    BGFX_TEXTURE_FORMAT_RGB9E5F,              
    BGFX_TEXTURE_FORMAT_BGRA8,                
    BGFX_TEXTURE_FORMAT_RGBA8,                
    BGFX_TEXTURE_FORMAT_RGBA8I,               
    BGFX_TEXTURE_FORMAT_RGBA8U,               
    BGFX_TEXTURE_FORMAT_RGBA8S,               
    BGFX_TEXTURE_FORMAT_RGBA16,               
    BGFX_TEXTURE_FORMAT_RGBA16I,              
    BGFX_TEXTURE_FORMAT_RGBA16U,              
    BGFX_TEXTURE_FORMAT_RGBA16F,              
    BGFX_TEXTURE_FORMAT_RGBA16S,              
    BGFX_TEXTURE_FORMAT_RGBA32I,              
    BGFX_TEXTURE_FORMAT_RGBA32U,              
    BGFX_TEXTURE_FORMAT_RGBA32F,              
    BGFX_TEXTURE_FORMAT_B5G6R5,               
    BGFX_TEXTURE_FORMAT_R5G6B5,               
    BGFX_TEXTURE_FORMAT_BGRA4,                
    BGFX_TEXTURE_FORMAT_RGBA4,                
    BGFX_TEXTURE_FORMAT_BGR5A1,               
    BGFX_TEXTURE_FORMAT_RGB5A1,               
    BGFX_TEXTURE_FORMAT_RGB10A2,              
    BGFX_TEXTURE_FORMAT_RG11B10F,             
    BGFX_TEXTURE_FORMAT_UNKNOWNDEPTH,         
    BGFX_TEXTURE_FORMAT_D16,                  
    BGFX_TEXTURE_FORMAT_D24,                  
    BGFX_TEXTURE_FORMAT_D24S8,                
    BGFX_TEXTURE_FORMAT_D32,                  
    BGFX_TEXTURE_FORMAT_D16F,                 
    BGFX_TEXTURE_FORMAT_D24F,                 
    BGFX_TEXTURE_FORMAT_D32F,                 
    BGFX_TEXTURE_FORMAT_D0S8,                 
    BGFX_TEXTURE_FORMAT_COUNT
} bgfx_texture_format_t;
typedef enum bgfx_occlusion_query_result
{
    BGFX_OCCLUSION_QUERY_RESULT_INVISIBLE,    
    BGFX_OCCLUSION_QUERY_RESULT_VISIBLE,      
    BGFX_OCCLUSION_QUERY_RESULT_NORESULT,     
    BGFX_OCCLUSION_QUERY_RESULT_COUNT
} bgfx_occlusion_query_result_t;
typedef uint16_t bgfx_view_id_t;
typedef struct bgfx_dynamic_index_buffer_handle_s { uint16_t idx; } bgfx_dynamic_index_buffer_handle_t;
typedef struct bgfx_dynamic_vertex_buffer_handle_s { uint16_t idx; } bgfx_dynamic_vertex_buffer_handle_t;
typedef struct bgfx_frame_buffer_handle_s { uint16_t idx; } bgfx_frame_buffer_handle_t;
typedef struct bgfx_index_buffer_handle_s { uint16_t idx; } bgfx_index_buffer_handle_t;
typedef struct bgfx_indirect_buffer_handle_s { uint16_t idx; } bgfx_indirect_buffer_handle_t;
typedef struct bgfx_occlusion_query_handle_s { uint16_t idx; } bgfx_occlusion_query_handle_t;
typedef struct bgfx_program_handle_s { uint16_t idx; } bgfx_program_handle_t;
typedef struct bgfx_texture_handle_s { uint16_t idx; } bgfx_texture_handle_t;
typedef struct bgfx_uniform_handle_s { uint16_t idx; } bgfx_uniform_handle_t;
typedef struct bgfx_vertex_buffer_handle_s { uint16_t idx; } bgfx_vertex_buffer_handle_t;
typedef struct bgfx_transient_index_buffer_s
{
    uint8_t*             data;               
    uint32_t             size;               
    uint32_t             startIndex;         
    bgfx_index_buffer_handle_t handle;       
    bool                 isIndex16;          
} bgfx_transient_index_buffer_t;
typedef struct bgfx_transient_vertex_buffer_s
{
    uint8_t*             data;               
    uint32_t             size;               
    uint32_t             startVertex;        
    uint16_t             stride;             
    bgfx_vertex_buffer_handle_t handle;      
    bgfx_vertex_layout_handle_t layoutHandle; 
} bgfx_transient_vertex_buffer_t;
typedef struct bgfx_instance_data_buffer_s
{
    uint8_t*             data;               
    uint32_t             size;               
    uint32_t             offset;             
    uint32_t             num;                
    uint16_t             stride;             
    bgfx_vertex_buffer_handle_t handle;      
} bgfx_instance_data_buffer_t;
typedef struct bgfx_encoder_s bgfx_encoder_t;
BGFX_C_API void bgfx_dbg_text_printf(uint16_t _x, uint16_t _y, uint8_t _attr, const char* _format, ... );
BGFX_C_API void bgfx_dbg_text_image(uint16_t _x, uint16_t _y, uint16_t _width, uint16_t _height, const void* _data, uint16_t _pitch);
BGFX_C_API uint32_t bgfx_read_texture(bgfx_texture_handle_t _handle, void* _data, uint8_t _mip);
BGFX_C_API bgfx_texture_handle_t bgfx_get_texture(bgfx_frame_buffer_handle_t _handle, uint8_t _attachment);
BGFX_C_API bgfx_occlusion_query_handle_t bgfx_create_occlusion_query(void);
BGFX_C_API bgfx_occlusion_query_result_t bgfx_get_result(bgfx_occlusion_query_handle_t _handle, int32_t* _result);
BGFX_C_API void bgfx_destroy_occlusion_query(bgfx_occlusion_query_handle_t _handle);
BGFX_C_API void bgfx_reset_view(bgfx_view_id_t _id);
BGFX_C_API void bgfx_encoder_set_marker(bgfx_encoder_t* _this, const char* _marker);
BGFX_C_API void bgfx_encoder_set_state(bgfx_encoder_t* _this, uint64_t _state, uint32_t _rgba);
BGFX_C_API void bgfx_encoder_set_condition(bgfx_encoder_t* _this, bgfx_occlusion_query_handle_t _handle, bool _visible);
BGFX_C_API void bgfx_encoder_set_stencil(bgfx_encoder_t* _this, uint32_t _fstencil, uint32_t _bstencil);
BGFX_C_API uint16_t bgfx_encoder_set_scissor(bgfx_encoder_t* _this, uint16_t _x, uint16_t _y, uint16_t _width, uint16_t _height);
BGFX_C_API void bgfx_encoder_set_scissor_cached(bgfx_encoder_t* _this, uint16_t _cache);
BGFX_C_API uint32_t bgfx_encoder_set_transform(bgfx_encoder_t* _this, const void* _mtx, uint16_t _num);
BGFX_C_API void bgfx_encoder_set_transform_cached(bgfx_encoder_t* _this, uint32_t _cache, uint16_t _num);
BGFX_C_API void bgfx_encoder_set_uniform(bgfx_encoder_t* _this, bgfx_uniform_handle_t _handle, const void* _value, uint16_t _num);
BGFX_C_API void bgfx_encoder_set_index_buffer(bgfx_encoder_t* _this, bgfx_index_buffer_handle_t _handle, uint32_t _firstIndex, uint32_t _numIndices);
BGFX_C_API void bgfx_encoder_set_dynamic_index_buffer(bgfx_encoder_t* _this, bgfx_dynamic_index_buffer_handle_t _handle, uint32_t _firstIndex, uint32_t _numIndices);
BGFX_C_API void bgfx_encoder_set_transient_index_buffer(bgfx_encoder_t* _this, const bgfx_transient_index_buffer_t* _tib, uint32_t _firstIndex, uint32_t _numIndices);
BGFX_C_API void bgfx_encoder_set_vertex_buffer(bgfx_encoder_t* _this, uint8_t _stream, bgfx_vertex_buffer_handle_t _handle, uint32_t _startVertex, uint32_t _numVertices);
BGFX_C_API void bgfx_encoder_set_dynamic_vertex_buffer(bgfx_encoder_t* _this, uint8_t _stream, bgfx_dynamic_vertex_buffer_handle_t _handle, uint32_t _startVertex, uint32_t _numVertices);
BGFX_C_API void bgfx_encoder_set_transient_vertex_buffer(bgfx_encoder_t* _this, uint8_t _stream, const bgfx_transient_vertex_buffer_t* _tvb, uint32_t _startVertex, uint32_t _numVertices);
BGFX_C_API void bgfx_encoder_set_vertex_count(bgfx_encoder_t* _this, uint32_t _numVertices);
BGFX_C_API void bgfx_encoder_set_instance_data_buffer(bgfx_encoder_t* _this, const bgfx_instance_data_buffer_t* _idb, uint32_t _start, uint32_t _num);
BGFX_C_API void bgfx_encoder_set_instance_data_from_vertex_buffer(bgfx_encoder_t* _this, bgfx_vertex_buffer_handle_t _handle, uint32_t _startVertex, uint32_t _num);
BGFX_C_API void bgfx_encoder_set_instance_data_from_dynamic_vertex_buffer(bgfx_encoder_t* _this, bgfx_dynamic_vertex_buffer_handle_t _handle, uint32_t _startVertex, uint32_t _num);
BGFX_C_API void bgfx_encoder_set_texture(bgfx_encoder_t* _this, uint8_t _stage, bgfx_uniform_handle_t _sampler, bgfx_texture_handle_t _handle, uint32_t _flags);
BGFX_C_API void bgfx_encoder_touch(bgfx_encoder_t* _this, bgfx_view_id_t _id);
BGFX_C_API void bgfx_encoder_submit(bgfx_encoder_t* _this, bgfx_view_id_t _id, bgfx_program_handle_t _program, uint32_t _depth, uint8_t _flags);
BGFX_C_API void bgfx_encoder_submit_occlusion_query(bgfx_encoder_t* _this, bgfx_view_id_t _id, bgfx_program_handle_t _program, bgfx_occlusion_query_handle_t _occlusionQuery, uint32_t _depth, uint8_t _flags);
BGFX_C_API void bgfx_encoder_submit_indirect(bgfx_encoder_t* _this, bgfx_view_id_t _id, bgfx_program_handle_t _program, bgfx_indirect_buffer_handle_t _indirectHandle, uint16_t _start, uint16_t _num, uint32_t _depth, uint8_t _flags);
BGFX_C_API void bgfx_encoder_set_compute_index_buffer(bgfx_encoder_t* _this, uint8_t _stage, bgfx_index_buffer_handle_t _handle, bgfx_access_t _access);
BGFX_C_API void bgfx_encoder_set_compute_vertex_buffer(bgfx_encoder_t* _this, uint8_t _stage, bgfx_vertex_buffer_handle_t _handle, bgfx_access_t _access);
BGFX_C_API void bgfx_encoder_set_image(bgfx_encoder_t* _this, uint8_t _stage, bgfx_texture_handle_t _handle, uint8_t _mip, bgfx_access_t _access, bgfx_texture_format_t _format);
BGFX_C_API void bgfx_set_condition(bgfx_occlusion_query_handle_t _handle, bool _visible);
BGFX_C_API uint16_t bgfx_set_scissor(uint16_t _x, uint16_t _y, uint16_t _width, uint16_t _height);
BGFX_C_API void bgfx_set_scissor_cached(uint16_t _cache);
BGFX_C_API void bgfx_set_transform_cached(uint32_t _cache, uint16_t _num);
BGFX_C_API void bgfx_set_uniform(bgfx_uniform_handle_t _handle, const void* _value, uint16_t _num);
BGFX_C_API void bgfx_set_index_buffer(bgfx_index_buffer_handle_t _handle, uint32_t _firstIndex, uint32_t _numIndices);
BGFX_C_API void bgfx_set_dynamic_index_buffer(bgfx_dynamic_index_buffer_handle_t _handle, uint32_t _firstIndex, uint32_t _numIndices);
BGFX_C_API void bgfx_set_transient_index_buffer(const bgfx_transient_index_buffer_t* _tib, uint32_t _firstIndex, uint32_t _numIndices);
BGFX_C_API void bgfx_set_vertex_buffer(uint8_t _stream, bgfx_vertex_buffer_handle_t _handle, uint32_t _startVertex, uint32_t _numVertices);
BGFX_C_API void bgfx_set_dynamic_vertex_buffer(uint8_t _stream, bgfx_dynamic_vertex_buffer_handle_t _handle, uint32_t _startVertex, uint32_t _numVertices);
BGFX_C_API void bgfx_set_transient_vertex_buffer(uint8_t _stream, const bgfx_transient_vertex_buffer_t* _tvb, uint32_t _startVertex, uint32_t _numVertices);
BGFX_C_API void bgfx_set_vertex_count(uint32_t _numVertices);
BGFX_C_API void bgfx_set_instance_data_buffer(const bgfx_instance_data_buffer_t* _idb, uint32_t _start, uint32_t _num);
BGFX_C_API void bgfx_set_instance_data_from_vertex_buffer(bgfx_vertex_buffer_handle_t _handle, uint32_t _startVertex, uint32_t _num);
BGFX_C_API void bgfx_set_instance_data_from_dynamic_vertex_buffer(bgfx_dynamic_vertex_buffer_handle_t _handle, uint32_t _startVertex, uint32_t _num);
BGFX_C_API void bgfx_set_instance_count(uint32_t _numInstances);
BGFX_C_API void bgfx_blit(bgfx_view_id_t _id, bgfx_texture_handle_t _dst, uint8_t _dstMip, uint16_t _dstX, uint16_t _dstY, uint16_t _dstZ, bgfx_texture_handle_t _src, uint8_t _srcMip, uint16_t _srcX, uint16_t _srcY, uint16_t _srcZ, uint16_t _width, uint16_t _height, uint16_t _depth);
BGFX_C_API int32_t bgfx_vsnprintf(char* _str, size_t _count, const char* _format, va_list _argList);